# simpledms

./: .env.template  .gitignore  Dockerfile.backend  Dockerfile.base  Dockerfile.frontend  LICENSE  README.md  Roadmap.md  docker-compose.yml  requirements.txt  s3support.md  start.sh  test_deployment.sh
backend/: .env.example  __init__.py  main.py  migrate_storage.py  pyproject.toml  test_b2.py  test_db.py  test_storage.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  api.py  documents.py
backend/app/api/v1/endpoints/: categories.py  config.py  documents.py  shares.py  tags.py
backend/app/core/: config.py  database.py  init_db.py  tasks.py
backend/app/models/: base.py  category.py  document.py  share.py  tag.py
backend/app/services/: ai_analysis.py  b2.py  config.py  document.py  s3.py  share.py
backend/app/services/storage/: README.md  b2.py  base.py  factory.py  migration.py  s3.py
docs/: DEVELOPMENT.md  README.md  ROADMAP.md  auth-plan.md  frontend_transition.md  storage.md
frontend/: main.py
frontend/app/: __init__.py
frontend/app/api/: document_api.py
frontend/app/components/: navigation.py  utils.py
frontend/app/pages/: __init__.py  config.py  documents.py  upload.py  user.py
