[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpledms"
version = "0.1.0"
description = "Simple Document Management System"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "beanie",
    "motor",
    "python-multipart",
    "httpx"
]

[tool.hatch.build.targets.wheel]
packages = ["app"] 